--- a/propane.html
+++ b/propane.html
@@ -17,7 +17,7 @@ model-viewer#reveal {
 <model-viewer
 ar
 ar-modes="scene-viewer webxr quick-look"
-src="/.propane.glb"
+src="./propane.glb"
 alt="propane"
 auto-rotate
 camera-controls
