--- a/butane.html
+++ b/butane.html
@@ -17,7 +17,7 @@ model-viewer#reveal {
 <model-viewer
 ar
 ar-modes="scene-viewer webxr quick-look"
-src="/.butane.glb"
+src="./butane.glb"
 alt="butane"
 auto-rotate
 camera-controls
