--- a/cyclobutane.html
+++ b/cyclobutane.html
@@ -17,7 +17,7 @@ model-viewer#reveal {
 <model-viewer
 ar
 ar-modes="scene-viewer webxr quick-look"
-src="/.cyclobutane.glb"
+src="./cyclobutane.glb"
 alt="cyclobutane"
 auto-rotate
 camera-controls
