--- a/cyclohexane.html
+++ b/cyclohexane.html
@@ -17,7 +17,7 @@ model-viewer#reveal {
 <model-viewer
 ar
 ar-modes="scene-viewer webxr quick-look"
-src="/.cyclohexane.glb"
+src="./cyclohexane.glb"
 alt="cyclohexane"
 auto-rotate
 camera-controls
