--- a/cyclopentane.html
+++ b/cyclopentane.html
@@ -17,7 +17,7 @@ model-viewer#reveal {
 <model-viewer
 ar
 ar-modes="scene-viewer webxr quick-look"
-src="/.cyclopentane.glb"
+src="./cyclopentane.glb"
 alt="cyclopentane"
 auto-rotate
 camera-controls
