--- a/cyclopropane.html
+++ b/cyclopropane.html
@@ -17,7 +17,7 @@ model-viewer#reveal {
 <model-viewer
 ar
 ar-modes="scene-viewer webxr quick-look"
-src="/.cyclopropane.glb"
+src="./cyclopropane.glb"
 alt="cyclopropane"
 auto-rotate
 camera-controls
