--- a/ethane.html
+++ b/ethane.html
@@ -17,7 +17,7 @@ model-viewer#reveal {
 <model-viewer
 ar
 ar-modes="scene-viewer webxr quick-look"
-src=".ethane.glb"
+src="./ethane.glb"
 alt="ethane"
 auto-rotate
 camera-controls
