--- a/hexane.html
+++ b/hexane.html
@@ -17,7 +17,7 @@ model-viewer#reveal {
 <model-viewer
 ar
 ar-modes="scene-viewer webxr quick-look"
-src="/.hexane.glb"
+src="./hexane.glb"
 alt="hexane"
 auto-rotate
 camera-controls
