--- a/pentane.html
+++ b/pentane.html
@@ -17,7 +17,7 @@ model-viewer#reveal {
 <model-viewer
 ar
 ar-modes="scene-viewer webxr quick-look"
-src="/.pentane.glb"
+src="./pentane.glb"
 alt="pentane"
 auto-rotate
 camera-controls
